@@ -13,6 +13,8 @@ ModulesView.1=executable
 ModulesView.10=Size: 
 ModulesView.11=\ (symbols loaded)
 ModulesView.12=(symbols not loaded)
+ModulesView.13=Select &All
+ModulesView.16=&Copy
 ModulesView.2=shared library
 ModulesView.3=Type: 
 ModulesView.4=Symbols: 
