@@ -1,3 +1,9 @@
+2005-07-12 Mikhail Khodjaiants
+	Bug 103162: Module View: Missing context menu on detailed pane.
+	* ModulesMessages.properties
+	* ModulesView.java
+	* plugin.xml
+
 2005-07-08 Mikhail Khodjaiants
 	Bug 79371: Setting breakpoints in the left hand side ruler of the disassembly view is sluggish.
 	Asynchronous breakpoint handling.
